Upgrade mockk test version